Add a total gravity

--- a/webpack/components/frame/styles.css
+++ b/webpack/components/frame/styles.css
@@ -16,3 +16,9 @@
     border: 1px solid lightgray;
     border-radius: 3px;
 }
+
+.gravity {
+    width: 50px;
+    border: 1px solid lightgray;
+    border-radius: 3px;
+}
